--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^4.1.0",
     "eslint-config-prettier": "^2.4.0",
     "eslint-config-xo": "^0.18.2",
+    "eslint-plugin-html": "^4.0.5",
     "eslint-plugin-prettier": "^2.2.0",
     "husky": "^0.14.3",
     "jest": "^21.0.0",
