--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lint-staged": "^4.2.1",
     "nsp": "^2.6.3",
     "prettier": "^1.7.0",
+    "release-it": "^7.4.5",
     "yeoman-assert": "^3.1.0",
     "yeoman-test": "^1.7.0"
   },
@@ -44,6 +45,7 @@
     "prepublish": "nsp check",
     "pretest": "eslint .",
     "precommit": "lint-staged",
+    "release": "release-it --config='config/.release-it.json'",
     "test": "jest"
   },
   "lint-staged": {
