--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "chalk": "^2.1.0",
-    "husky": "^0.14.3",
+    "husky": "^1.0.0-rc.13",
     "yeoman-generator": "^3.0.0",
     "yosay": "^2.0.1"
   },
