--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "dependencies": {
     "chalk": "^2.1.0",
+    "generator-easy-wc": "^0.0.3",
+    "global": "^4.3.2",
     "husky": "^1.0.0-rc.13",
     "yeoman-generator": "^3.0.0",
     "yosay": "^2.0.1"
@@ -80,6 +82,6 @@
       "prettier"
     ]
   },
-  "repository": "Westbrook/generator-opinionated-wc",
+  "repository": "Westbrook/generator-easy-wc",
   "license": "Apache-2.0"
 }
