Remove bower from packages

--- a/generators/app/templates/config/.release-it.json
+++ b/generators/app/templates/config/.release-it.json
@@ -1,8 +1,5 @@
 {
-  "pkgFiles": [
-    "package.json",
-    "bower.json"
-  ],
+  "pkgFiles": ["package.json"],
   "github": {
     "release": true,
     "releaseName": "Release %s",
