--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -11,7 +11,6 @@
     "prepages": "yarn analyze && polymer build && yarn copy:pages-dist && yarn copy:analysis",
     "pages": "gh-pages -d pages-dist",
     "postpages": "rimraf pages-dist && rimraf build",
-    "prerelease": "yarn nsp",
     "release": "release-it --config='config/.release-it.json'",
     "postrelease": "yarn pages",
     "lint": "yarn lint:styles && yarn lint:polymer && yarn lint:js && yarn lint:html",
@@ -20,8 +19,7 @@
     "lint:js": "yarn eslint . --fix",
     "lint:html": "yarn htmlhint --ignore **/bower_components/**,**/node_modules/**",
     "test": "polymer test --module-resolution=node --npm",
-    "update-settings": "scripty",
-    "nsp": "nsp check ."
+    "update-settings": "scripty"
   },
   "devDependencies": {
     "@polymer/iron-component-page": "^4.0.0",
@@ -35,11 +33,10 @@
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-html": "^4.0.3",
     "gh-pages": "^1.0.0",
-    "htmlhint": "^0.9.13",
+    "htmlhint": "^0.10.0",
     "husky": "^1.1.2",
     "lint-staged": "^4.3.0",
     "mocha": "^5.1.0",
-    "nsp": "^3.2.1",
     "polymer-cli": "^1.7.1",
     "pwa-helpers": "^0.8.2",
     "release-it": "^7.4.7",
@@ -47,8 +44,8 @@
     "stylelint": "^8.2.0",
     "stylelint-config-standard": "^17.0.0",
     "stylelint-processor-html": "^1.0.0",
-    "wct-browser-legacy": "^1.0.0",
-    "wct-istanbub": "^0.2.1"
+    "wct-istanbub": "^0.2.1",
+    "wct-mocha": "^1.0.0"
   },
   "version": "0.0.0",
   "lint-staged": {
