Add upgrade generator.

--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -5,14 +5,16 @@
   "main": "<%= elementName %>.js",
   "module": "<%= elementName %>.js",
   "scripts": {
-    "grep": "grep -Ir --exclude=analysis.json --exclude-dir=bower_components --exclude-dir=node_modules --exclude-dir=coverage",
+    "grep": "grep -Ir --exclude=analysis.json --exclude-dir=node_modules --exclude-dir=coverage",
     "analyze": "polymer analyze > analysis.json",
     "preserve": "yarn analyze",
     "serve": "polymer serve --open --open-path .",
+    "copy": "yarn copy:pages-dist && yarn copy:analysis",
+    "postcopy": "touch pages-dist/.nojekyll",
     "copy:analysis": "cp analysis.json pages-dist/",
     "copy:pages-dist": "cp -r build/default/ pages-dist/",
-    "prepages": "yarn analyze && polymer build && yarn copy:pages-dist && yarn copy:analysis",
-    "pages": "gh-pages -d pages-dist",
+    "prepages": "yarn analyze && polymer build && yarn copy",
+    "pages": "gh-pages -t -d pages-dist -m '[skip ci]'",
     "postpages": "rimraf pages-dist && rimraf build",
     "release": "release-it --config='config/.release-it.json'",
     "postrelease": "yarn pages",
@@ -20,7 +22,7 @@
     "lint:styles": "yarn stylelint *styles.js",
     "lint:polymer": "polymer lint",
     "lint:js": "yarn eslint . --fix",
-    "lint:html": "yarn htmlhint --ignore **/bower_components/**,**/node_modules/**",
+    "lint:html": "yarn htmlhint --ignore **/node_modules/**",
     "test": "polymer test --module-resolution=node --npm",
     "update-settings": "scripty"
   },
