Add upgrade path

--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -71,7 +71,7 @@
   },
   "dependencies": {
     "@webcomponents/webcomponentsjs": "latest",
-    "lit-element": "^2.0.0"
+    "lit-element": "^2.0.0-rc.2"
   },
   "husky": {
     "hooks": {
